Update backend URL to deployed Render service

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,6 +1,5 @@
 # Frontend Environment Variables
 # This file is used for PRODUCTION DEPLOYMENT
 
-# Backend API URL - Update this with your Render backend URL after deployment
-# Example: https://rag-resume-backend.onrender.com
-VITE_API_BASE_URL=https://rag-uye6.onrender.com
+# Backend API URL - Your deployed Render backend
+VITE_API_BASE_URL=https://rag-2-609w.onrender.com
